[tool.poetry]
name = "pysparktesting"
version = "0.1.0"
description = ""
authors = ["SAIsmail <syedahmedismail98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.1.1"
quinn = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.masonry.api"
